add release_time to jobs

--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -10,6 +10,7 @@
     attributes:
       job:
         title: "职位"
+        release: 发布时间
         wage_lower_bound: "薪资下限"
         wage_upper_bound: "薪资上限"
         job_experience: "工作经验"
